--- a/finality-aleph/Cargo.toml
+++ b/finality-aleph/Cargo.toml
@@ -45,4 +45,7 @@ async-trait = "0.1.42"
 [dev-dependencies]
 substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12"}
 substrate-test-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12"}
+substrate-test-client = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
 sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12"}
+sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
+sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
